# controllers/authController.go
@@ -5,7 +5,6 @@ import (
 	"go-gin-workshop/dto"
 	"go-gin-workshop/services"
 	"go-gin-workshop/utils"
-	"log"
 	"net/http"
 
 	"github.com/gin-gonic/gin"
@@ -26,8 +25,35 @@ func NewAuthController(authService services.AuthService) AuthController {
 	}
 }
 
+// ShowAccount godoc
+//
+//	@Summary		Login User
+//	@Description	login user
+//	@Tags			Auth
+//	@Accept			json
+//	@Produce		json
+//	@Param			Request body	dto.LoginDto    true    "Login"
+//	@Success		200	{object}	types.Response
+//	@Router			/auth/login [post]
 func (c *authController) LoginController(ctx *gin.Context) {
+	var loginDto dto.LoginDto
+	err := ctx.ShouldBind(&loginDto)
+	if err != nil {
+		res := utils.BuildResponseFailed(http.StatusBadRequest, constants.MESSAGE_MAPDATA_ERR, err.Error(), nil)
+		ctx.JSON(http.StatusBadRequest, res)
+		return
+	}
 
+	result, err := c.authService.LoginService(ctx.Request.Context(), loginDto)
+
+	if err != nil {
+		res := utils.BuildResponseFailed(http.StatusBadRequest, constants.MESSAGE_BAD_REQUEST, err.Error(), nil)
+		ctx.JSON(http.StatusBadRequest, res)
+		return
+	}
+
+	res := utils.BuildResponseSuccess(http.StatusOK, constants.MESSAGE_SUCCESS, result)
+	ctx.JSON(http.StatusOK, res)
 }
 
 // ShowAccount godoc
@@ -54,13 +80,12 @@ func (c *authController) RegisterController(ctx *gin.Context) {
 	result, err := c.authService.RegisterService(ctx.Request.Context(), registerDto)
 
 	if err != nil {
-		res := utils.BuildResponseFailed(http.StatusBadRequest, constants.MESSAGE_MAPDATA_ERR, err.Error(), nil)
-		ctx.JSON(http.StatusInternalServerError, res)
+		res := utils.BuildResponseFailed(http.StatusBadRequest, constants.MESSAGE_BAD_REQUEST, err.Error(), nil)
+		ctx.JSON(http.StatusBadRequest, res)
 		return
 	}
 
 	res := utils.BuildResponseSuccess(http.StatusOK, constants.MESSAGE_SUCCESS, result)
 	ctx.JSON(http.StatusOK, res)
-	log.Printf("================================================================", registerDto)
 
 }
