# dto/login.go
@@ -1,0 +1,6 @@
+package dto
+
+type LoginDto struct {
+	Email    string `json:"email" validate:"required,email"`
+	Password string `json:"password"`
+}
