# routes/authRoute.go
@@ -10,6 +10,7 @@ func NewAuthRoute(route *gin.Engine, authController controllers.AuthController) 
 	routes := route.Group("/api/auth")
 	{
 		routes.POST("/register", authController.RegisterController)
+		routes.POST("/login", authController.LoginController)
 	}
 
 }
